--- a/blv/printer-mmu2s-config.cfg
+++ b/blv/printer-mmu2s-config.cfg
@@ -68,7 +68,7 @@ variable_min_temp_extruder: 180
 variable_extruder_eject_temp: 200
 variable_timeout_pause: 36000
 variable_disable_heater: 600
-variable_pause_x: 17
+variable_pause_x: 20
 variable_pause_x_out: 40
 variable_pause_y: -45
 variable_pause_y_out: 0
@@ -85,7 +85,7 @@ variable_enable_sensor_any : False
 variable_enable_sensor_on_gear: False
 variable_enable_sensor_before_gear: True
 variable_enable_sensor_after_gear: True
-variable_enable_motion_sensor: True
+variable_enable_motion_sensor: False
 #
 variable_purge_after_load: True
 variable_purge_speed: 200
