--- a/blv/printer-mmu2s-length-sensors.cfg
+++ b/blv/printer-mmu2s-length-sensors.cfg
@@ -3,7 +3,7 @@
 serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_8095060110134753384C4E00-if00
 
 [filament_motion_sensor FMS_T0]
-detection_length: 10.0
+detection_length: 2.0
 #   The minimum length of filament pulled through the sensor to trigger
 #   a state change on the switch_pin
 #   Default is 7 mm.
@@ -14,7 +14,7 @@ switch_pin: sensorboard:PA0
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	RESPONG MSG="Runout Detected!"
+	RESPOND MSG="Runout Detected!"
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
@@ -23,7 +23,7 @@ runout_gcode:
 #   above parameters.
 
 [filament_motion_sensor FMS_T1]
-detection_length: 10.0
+detection_length: 2.0
 #   The minimum length of filament pulled through the sensor to trigger
 #   a state change on the switch_pin
 #   Default is 7 mm.
@@ -34,7 +34,7 @@ switch_pin: sensorboard:PA1
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	RESPONG MSG="Runout Detected!"
+	RESPOND MSG="Runout Detected!"
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
@@ -44,7 +44,7 @@ runout_gcode:
 
 
 [filament_motion_sensor FMS_T2]
-detection_length: 10.0
+detection_length: 2.0
 #   The minimum length of filament pulled through the sensor to trigger
 #   a state change on the switch_pin
 #   Default is 7 mm.
@@ -55,7 +55,7 @@ switch_pin: sensorboard:PA2
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	RESPONG MSG="Runout Detected!"
+	RESPOND MSG="Runout Detected!"
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
@@ -64,7 +64,7 @@ runout_gcode:
 #   above parameters.
 
 [filament_motion_sensor FMS_T3]
-detection_length: 10.0
+detection_length: 2.0
 #   The minimum length of filament pulled through the sensor to trigger
 #   a state change on the switch_pin
 #   Default is 7 mm.
@@ -75,7 +75,7 @@ switch_pin: sensorboard:PA3
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	RESPONG MSG="Runout Detected!"
+	RESPOND MSG="Runout Detected!"
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
@@ -84,7 +84,7 @@ runout_gcode:
 #   above parameters.
 
 [filament_motion_sensor FMS_T4]
-detection_length: 10.0
+detection_length: 2.0
 #   The minimum length of filament pulled through the sensor to trigger
 #   a state change on the switch_pin
 #   Default is 7 mm.
@@ -95,7 +95,7 @@ switch_pin: sensorboard:PA4
 #pause_on_runout:
 pause_on_runout: False
 runout_gcode:
-	RESPONG MSG="Runout Detected!"
+	RESPOND MSG="Runout Detected!"
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=True
 #insert_gcode:
 #event_delay:
