--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -108,12 +108,12 @@ gcode:
 	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_PAUSE VARIABLE=error_retry_pause VALUE={error}
 	_MMU_WRITE_STAT MSG="ERROR:PAUSE:T{printer["gcode_macro SELECT_TOOL"].color_selected}"
 
-[gcode_macro _MMU_ERROR_INCREMENT_RUNOUT]
+[gcode_macro _MMU_ERROR_RUNOUT]
 variable_error_runout: 0
 variable_is_runout: False
 gcode:
 	{% set error = error_runout + 1 %}
-	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=error_runout VALUE={error}
+	SET_GCODE_VARIABLE MACRO=_MMU_ERROR_RUNOUT VARIABLE=error_runout VALUE={error}
 	_MMU_WRITE_STAT MSG="ERROR:RUNOUT:T{printer["gcode_macro SELECT_TOOL"].color_selected}"
 
 #####
@@ -402,9 +402,6 @@ gcode:
 	{% endif %}
 	_MMU_WRITE_STAT MSG="TX:1:T{EXTRUDER}"
 	_EXTRUDER_IN_STATUS
-	{% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
-		_STATUS_PRINTING    
-	{% endif %}
 	_TX_END EXTRUDER={EXTRUDER}
 
 [gcode_macro _RESTORE_STATE_IF_SWAP_OK]
@@ -442,17 +439,20 @@ gcode:
 
 [gcode_macro _CHECK_PURGE]
 gcode:
-	{% if printer["gcode_macro _MMU_ERROR_INCREMENT_RUNOUT"].is_runout %}
+	{% if printer["gcode_macro _MMU_ERROR_RUNOUT"].is_runout %}
 		RESPOND MSG="Runout detected :("
-		SET_GCODE_VARIABLE MACRO=_MMU_ERROR_INCREMENT_RUNOUT VARIABLE=is_runout VALUE=False
-		_MMU_ERROR_PURGE
-		PAUSE_MMU
+		SET_GCODE_VARIABLE MACRO=_MMU_ERROR_RUNOUT VARIABLE=is_runout VALUE=False
+		_MMU_ERROR_RUNOUT
+		#PAUSE_MMU
 	{% else %}
 		MMU_RESPOND MSG="Purge done :)"
 	{% endif %}
 
 [gcode_macro _TX_END]
 gcode:
+	{% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
+		_STATUS_PRINTING    
+	{% endif %}
 	{% set EXTRUDER = params.EXTRUDER|default(0)|int %}
 	{% if printer["gcode_macro _EXTRUDER_IN_STATUS"].filament_loaded %}
 		SET_DISPLAY_TEXT MSG="T{printer["gcode_macro TX"].old_color}->T{EXTRUDER} Loaded :)"
@@ -719,16 +719,20 @@ gcode:
 		{% else %}
 				G1 E{purge_length} F{printer["gcode_macro _VAR_MMU2S"].purge_speed}
 		{% endif %}
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_motion_sensor %}
-			FMS_DISABLE EXTRUDER={printer["gcode_macro SELECT_TOOL"].color_selected|int}
-		{% endif %}
 		M400
 		G92 E0
 		G1 E-{printer["gcode_macro _VAR_MMU2S"].purge_retract_at_end} F{printer["gcode_macro _VAR_MMU2S"].purge_speed}
 		G92 E0
 		G90
+		_PURGE_FILAMENT_END
 	{% endif %}
 	{% endif %}
+	{% endif %}
+
+[gcode_macro _PURGE_FILAMENT_END]
+gcode:
+	{% if printer["gcode_macro _VAR_MMU2S"].enable_motion_sensor %}
+		FMS_DISABLE EXTRUDER={printer["gcode_macro SELECT_TOOL"].color_selected|int}
 	{% endif %}
 
 
@@ -900,7 +904,7 @@ gcode:
 	{% endif %}
 
 [gcode_macro _FILAMETRIX_CUT_FILAMENT]
-variable_nb_test_in: 3
+variable_nb_test_in: 1
 gcode:
 	{% if printer["gcode_macro _VAR_MMU2S"].enable_filametrix_cut %}
 		MMU_RESPOND MSG="_FILAMETRIX_CUT_FILAMENT"
@@ -931,10 +935,16 @@ gcode:
 [gcode_macro _RETRY_IS_FILAMETRIX_CUT_FILAMENT]
 gcode:
 	{% if printer["filament_switch_sensor sensor_after_gear"].filament_detected %}
-                RESPOND MSG="Filament not cut ... :("
-                _MMU_ERROR_CUT
-                _EXTRUDER_STATUS
-                PAUSE_MMU
+		{% if not printer["filament_switch_sensor sensor_before_gear"].filament_detected %}
+			RESPOND MSG="Maybe problem with ... :("
+                	_MMU_ERROR_CUT
+                	_EXTRUDER_STATUS
+		{% else %}
+                	RESPOND MSG="Filament not cut ... :("
+                	_MMU_ERROR_CUT
+                	_EXTRUDER_STATUS
+                	PAUSE_MMU
+		{% endif %}
         {% else %}
                 MMU_RESPOND MSG="Filament cut ok"
         {% endif %}
@@ -963,6 +973,12 @@ gcode:
 			G1 X{printer["gcode_macro _VAR_MMU2S"].pause_x} F2000
 		{% endfor %}
 		SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2209 stepper_x"]["run_current"]}
+		# unlock the arm
+		__MOVE_IN_EXTRUDER LENGTH=-10 SPEED=50
+		# push back the tips cutted
+		__MOVE_IN_EXTRUDER LENGTH={printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length1 + 10} SPEED=50
+		__MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length1} SPEED=50
+		# remove the filament from sensor_after_gear
 		__MOVE_IN_EXTRUDER LENGTH=-{printer["gcode_macro _VAR_MMU2S"].filametrix_unload_length2} SPEED=50
 
 # Ramming process for standart PLA, code extracted from slic3r gcode
