--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -391,7 +391,7 @@ gcode:
 		_MMU_WRITE_STAT MSG="LT:0:T{EXTRUDER}"
 		_LT VALUE={EXTRUDER}
 		_MMU_WRITE_STAT MSG="LT:1:T{EXTRUDER}"
-		{% if printer["gcode_macro _VAR_MMU2S"].enable_purge_servo %}
+		{% if printer["gcode_macro _VAR_MMU2S"].purge_after_load %}
 			_EXTRUDER_IN_STATUS
 			_TX_PURGE EXTRUDER={EXTRUDER}
 		{% endif %}
