--- a/vking/printer-mmu2s-board.cfg
+++ b/vking/printer-mmu2s-board.cfg
@@ -106,7 +106,7 @@ homing_retract_dist: 0
 #homing_retract_dist: 0
 
 ## IR extruder switch
-[filament_switch_sensor ir_sensor]
+[filament_switch_sensor sensor_on_gear]
 pause_on_runout: False
 #switch_pin: ^P1.28 # P1.28 for X-max on printer board
 switch_pin: ^!P1.28 # P1.28 for X-max on printer board
