--- a/vking/printer-mmu2s-config.cfg
+++ b/vking/printer-mmu2s-config.cfg
@@ -30,37 +30,53 @@
 #
 ################################
 [gcode_macro _VAR_MMU2S]
-variable_tmc2209_sensorless: True
-variable_timeout_pause: 36000
-variable_disable_heater: 600
+variable_enable_debug: False
+variable_enable_stealthburner_leds: False
+#
 variable_insert_into_mmu_length: 200
-variable_bowden_load_length1: 0
-variable_bowden_load_length2: 90
-variable_bowden_unload_length: 20
-variable_pinda_load_length: 120
-variable_pinda_unload_length: 15
-variable_load_in_extruder: 52
+#
+variable_filametrix_unload_length1: 35
+variable_filametrix_unload_length2: 55
 variable_unload_in_extruder1: 20
 variable_unload_in_extruder2: 30
+variable_bowden_unload_length: 20
+variable_pinda_unload_length: 15
+#
+variable_pinda_load_length: 120
+variable_bowden_load_length1: 0
+variable_bowden_load_length2: 90
+variable_load_in_extruder: 52
+#
+variable_enable_5in1: True
+variable_lift_z_during_swap: 0.2
+variable_tmc2209_sensorless: True
 variable_colorselector = [73.5,57.5,45.5,31.5,18.5]
 variable_idler = [5,20,35,50,65]
-variable_idler_home_position: 85
+variable_idler_home_position: 75
+#
+variable_min_temp_extruder: 180
+variable_extruder_eject_temp: 220
+variable_timeout_pause: 36000
+variable_disable_heater: 600
 variable_pause_x: 125
 variable_pause_x_out: 125
 variable_pause_y: -14.2
 variable_pause_y_out: 20
 variable_pause_z: 10
-variable_min_temp_extruder: 180
-variable_extruder_eject_temp: 220
-variable_enable_5in1: True
+#
 variable_enable_filametrix_cut: False
+variable_enable_filametrix_pause_at_start: False
 variable_filametrix_pos_start: 110
 variable_filametrix_pos_cut: -1
 variable_filametrix_nb_cut: 1
 variable_filametrix_x_current: 1.5
-variable_filametrix_unload_length1: 35
-variable_filametrix_unload_length2: 55
-variable_enable_sensor_before_gear: True
+#
+variable_enable_sensor_any : False
+variable_enable_sensor_on_gear: True
+variable_enable_sensor_before_gear: False
+variable_enable_sensor_after_gear: False
+variable_enable_motion_sensor: False
+#
 variable_purge_after_load: True
 variable_purge_speed: 200
 variable_purge_retract_at_end: 2
@@ -76,8 +92,6 @@ variable_t3_purge_load_length: 40
 variable_t3_purge_unload_length: 0
 variable_t4_purge_load_length: 40
 variable_t4_purge_unload_length: 0
-variable_enable_motion_sensor: True
-variable_enable_debug: False
 gcode:
 
 # MMU2S STANDARD
