--- a/vking/printer-mmu2s-board.cfg
+++ b/vking/printer-mmu2s-board.cfg
@@ -109,7 +109,8 @@ homing_retract_dist: 0
 [filament_switch_sensor sensor_on_gear]
 pause_on_runout: False
 #switch_pin: ^P1.28 # P1.28 for X-max on printer board
-switch_pin: ^!P1.28 # P1.28 for X-max on printer board
+#switch_pin: ^!P1.26 # P1.28 for X-max on printer board
+switch_pin: ^P1.0 # P1.28 for X-max on printer board
 event_delay:0.1
 runout_gcode:
     M117 Filament not in extruder
