--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -270,7 +270,7 @@ gcode:
     # Home the printer
     HOME_ALL
     # Load mesh
-    BED_MESH_PROFILE LOAD=default
+    #BED_MESH_PROFILE LOAD=default
     # Move the nozzle near the bed
     G1 Z15 F3000
     # Set and wait for nozzle to reach temperature
