--- a/printer-macros.cfg
+++ b/printer-macros.cfg
@@ -142,6 +142,7 @@ gcode:
     G1 X{printer["gcode_macro _VARS_PRINTER"].touchmi_x_pos|int} F3600
     G4 P1000
     G1 X{printer["gcode_macro _VARS_PRINTER"].touchmi_x_pos|int - 30} F3600
+    G1 Y{printer["gcode_macro _VARS_PRINTER"].touchmi_y_pos|int + 30} F3600
     M400
     {% endif %}
 
@@ -234,11 +235,22 @@ gcode:
         _STATUS_OFF
     {% endif %}
 
+[delayed_gcode MMUB_GEARSENSOR_OFF]
+initial_duration: 0.1
+gcode:
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_on_gear %}
+	SET_FILAMENT_SENSOR SENSOR=sensor_on_gear ENABLE=0
+    {% endif %}
+
+
 [gcode_macro START_PRINT]
 gcode:
     {% set BED_TEMP = params.BED_TEMP|default(0)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(0)|float %}
     {% set LOAD = params.LOAD|default(-1)|int %}
+    {% if printer["gcode_macro _VAR_MMU2S"].enable_sensor_on_gear %}
+	SET_FILAMENT_SENSOR SENSOR=sensor_on_gear ENABLE=0
+    {% endif %}
     {% if printer["gcode_macro _VAR_MMU2S"].enable_stealthburner_leds %}
         _STATUS_BUSY    
     {% endif %}
